#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.60)
AC_INIT(gmlive, 0.22.3, xihels@gmail.com)
AC_COPYRIGHT([Copyright (C) 2007 xihels@gmail.com])
AC_CONFIG_SRCDIR([src/main.cpp])
AC_CONFIG_HEADER([config.h])
AM_INIT_AUTOMAKE(dist-bzip2 no-define)

AM_MAINTAINER_MODE
IT_PROG_INTLTOOL([0.35.0])
AC_PROG_LIBTOOL

AC_PROG_CXX
AC_PROG_CXXCPP

AC_LANG_CPLUSPLUS

# Checks for libraries.
AC_CHECK_FUNCS([socket])

pkg_modules="gtkmm-2.4 >= 2.6.0 libxml-2.0 >= 2.6.0"
PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

dnl AC_MSG_CHECKING([whether Totem plugin support is requested])
dnl AC_ARG_ENABLE([plugin],
dnl         AS_HELP_STRING([--enable-plugin],[Enable totem plugin support]),
dnl         [enable_plugin=$enableval have_python=$enableval],
dnl         [enable_plugin=autodetect have_python=yes])
dnl AC_MSG_RESULT([$enable_plugin])
dnl 
dnl if test "x$have_python" != "xno"; then
dnl         AM_PATH_PYTHON([2.4],[],[no])
dnl         if test "x$PYTHON" = "x:"; then
dnl                 have_python=no
dnl         fi
dnl fi
dnl 
dnl if test "x$have_python" != "xno"; then
dnl     AM_PATH_PROG_WITH_TEST(have_totem, totem, [have_totem=yes],[no])
dnl     if test "x$have_totem" != "xno"; then
dnl         totem_version=`totem --version|awk -F. '{print $2}'` 
dnl         if test $totem_version -lt 20; then
dnl             have_totem=no
dnl         else
dnl             have_totem=yes
dnl             prefixdir="$(dirname $(dirname `which totem`))/lib"
dnl             AC_SUBST(prefixdir)
dnl             PLUGINDIR='${prefixdir}/totem/plugins'
dnl             AC_SUBST(PLUGINDIR)
dnl             ENABLE_PLUGIN=${have_totem}
dnl             AC_SUBST(ENABLE_PLUGIN)
dnl         fi
dnl     fi
dnl fi
dnl 
dnl AM_CONDITIONAL([ENABLE_PLUGIN],[test "x$have_totem" = "xyes"])

GETTEXT_PACKAGE=gmlive
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Gettext package])

AM_GLIB_GNU_GETTEXT

AC_CONFIG_FILES([Makefile
	   src/Makefile
           po/Makefile.in
           data/gmlive.desktop.in
	   data/Makefile])
AC_OUTPUT

