SUBDIRS = src data po

EXTRA_DIST =                    \
        ChangeLog               \
        TODO.tasks		\
        intltool-extract.in     \
        intltool-merge.in       \
        intltool-update.in

DISTCLEANFILES =                \
        intltool-extract        \
        intltool-merge          \
        intltool-update
