SUBDIRS = src data po plugins

EXTRA_DIST =                    \
        ChangeLog               \
	autogen.sh		\
        TODO.tasks		\
        intltool-extract.in     \
        intltool-merge.in       \
        intltool-update.in

DISTCLEANFILES =                \
        intltool-extract        \
        intltool-merge          \
        intltool-update
